# mfcs-bench

./: .gitignore  README.md  README_CN.md  pyproject.toml  read_report.py  requirements.txt  run_benchmark.py  setup.cfg
apps/: config.json
apps/mfcs-js/: example_app.js
apps/mfcs-python/: example_app.py  mfcs-python.py  requirements.txt
models/: config.json
reports/: README.md
src/mfcs_bench/: __init__.py
src/mfcs_bench/core/: __init__.py  analyzer.py  processor.py
test_cases/: test_case_chat.json  test_case_weather.json
tools/: config.json
